--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MaryV</title>
-  <link rel="manifest" href="/manifest.json" />
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/service-worker.js');
-      });
-    }
-  </script>
+  <title>Meri's Dashboard</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -19,40 +11,51 @@
       margin: 0;
       padding: 0;
     }
+
     .tabs {
       display: flex;
       justify-content: center;
       background-color: #007bff;
       flex-wrap: wrap;
     }
+
     .tab {
       padding: 15px 20px;
       color: white;
       cursor: pointer;
     }
+
     .tab.active {
       background-color: #0056b3;
     }
+
     .content {
       padding: 30px;
       max-width: 700px;
       margin: auto;
     }
+
     h1 {
       text-align: center;
     }
+
     #currentDate {
       text-align: center;
       font-weight: bold;
       margin-bottom: 20px;
     }
+
     .todo-container {
       background: white;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    input[type="text"], input[type="time"], input[type="date"], input[type="number"] {
+
+    input[type="text"],
+    input[type="time"],
+    input[type="date"],
+    input[type="number"] {
       width: 100%;
       padding: 10px;
       margin-top: 10px;
@@ -60,6 +63,7 @@
       border: 1px solid #ccc;
       border-radius: 5px;
     }
+
     button {
       padding: 10px 15px;
       background: #007bff;
@@ -69,11 +73,13 @@
       cursor: pointer;
       margin-top: 5px;
     }
+
     ul {
       list-style-type: none;
       padding-left: 0;
       margin-top: 15px;
     }
+
     li {
       background: #eee;
       padding: 10px;
@@ -83,19 +89,23 @@
       justify-content: space-between;
       align-items: center;
     }
+
     .task-group {
       display: flex;
       align-items: center;
       gap: 10px;
       flex-grow: 1;
     }
+
     .completed .task-text {
       text-decoration: line-through;
       color: gray;
     }
+
     .task-text {
       font-size: 16px;
     }
+
     .remove-btn {
       background: red;
       color: white;
@@ -104,227 +114,223 @@
       border-radius: 4px;
       cursor: pointer;
     }
+
     input[type="checkbox"] {
       transform: scale(1.2);
     }
+
     .hidden {
       display: none;
     }
+
     .log-row {
       display: flex;
       justify-content: space-between;
       align-items: center;
       gap: 10px;
     }
-    summary {
-      cursor: pointer;
-      font-weight: bold;
-      margin-top: 10px;
-    }
   </style>
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-database-compat.js"></script>
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyBnXWDkKRsbjvdgMlSrbgJvssu9N-LUDuA",
-      authDomain: "dailydashboard-64139.firebaseapp.com",
-      databaseURL: "https://dailydashboard-64139-default-rtdb.firebaseio.com",
-      projectId: "dailydashboard-64139",
-      storageBucket: "dailydashboard-64139.firebasestorage.app",
-      messagingSenderId: "420557412452",
-      appId: "1:420557412452:web:8ee806a83543b2b1776771"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-  </script>
 </head>
 <body>
   <div class="tabs">
-    <div class="tab active" data-tab="todo">✅ To-Do List</div>
-    <div class="tab" data-tab="timelog">⏱️ Time Log</div>
-    <div class="tab" data-tab="social">📱 Social Tracker</div>
-    <div class="tab" data-tab="hair">💇 Hair Tracker</div>
-    <div class="tab" data-tab="sleep">💤 Sleep Tracker</div>
+    <div class="tab active" onclick="switchTab('todo')">✅ To-Do List</div>
+    <div class="tab" onclick="switchTab('timelog')">⏱️ Time Log</div>
+    <div class="tab" onclick="switchTab('social')">📱 Social Tracker</div>
+    <div class="tab" onclick="switchTab('hair')">💇 Hair Tracker</div>
+    <div class="tab" onclick="switchTab('sleep')">💤 Sleep Tracker</div>
   </div>
+
   <div class="content">
     <div id="currentDate"></div>
 
+    <!-- TO-DO -->
     <div id="todo" class="todo-container">
       <h1>To-Do List</h1>
       <input type="text" id="taskInput" placeholder="Write your task..." />
       <button onclick="addTask()">Add</button>
-      <div id="dailyTaskSections"></div>
+      <ul id="taskList"></ul>
     </div>
 
+    <!-- TIME LOG -->
     <div id="timelog" class="todo-container hidden">
-      <h1>Time Log</h1>
-      <input type="time" id="timeStart" />
-      <input type="time" id="timeEnd" />
-      <input type="text" id="activityDesc" placeholder="What did you do?" />
-      <button onclick="addTimeLog()">Save</button>
-      <ul id="timeLogList"></ul>
+      <h1>Clock-In / Clock-Out</h1>
+      <div style="text-align:center; margin-bottom:10px;">🕒 Current Time: <span id="liveClock"></span></div>
+      <input type="text" id="activityName" placeholder="What are you working on?" />
+      <button onclick="clockIn()" id="clockInBtn">🟢 Clock In</button>
+      <button onclick="clockOut()" id="clockOutBtn" disabled>🔴 Clock Out</button>
+      <ul id="logList"></ul>
     </div>
 
+    <!-- SOCIAL TRACKER -->
     <div id="social" class="todo-container hidden">
-      <h1>Social Tracker</h1>
-      <input type="text" id="socialActivity" placeholder="What social app did you use?" />
-      <button onclick="addSocialLog()">Log</button>
+      <h1>Social Media Tracker</h1>
+      <p style="color: red; font-weight: bold;">⚠️ You are ruining your future if you scroll. Only post or learn!</p>
+      <input type="text" id="socialReason" placeholder="Why are you opening it? (Posting? Studying?)">
+      <button onclick="logSocial('TikTok')">TikTok</button>
+      <button onclick="logSocial('Instagram')">Instagram</button>
+      <button onclick="logSocial('YouTube')">YouTube</button>
       <ul id="socialList"></ul>
     </div>
 
+    <!-- HAIR TRACKER -->
     <div id="hair" class="todo-container hidden">
-      <h1>Hair Tracker</h1>
-      <button onclick="logHairTouch()">I touched my hair</button>
-      <ul id="hairLogList"></ul>
+      <h1>Hair Playing Tracker</h1>
+      <button onclick="logHair()">😬 I played with my hair</button>
+      <ul id="hairList"></ul>
     </div>
 
+    <!-- SLEEP TRACKER -->
     <div id="sleep" class="todo-container hidden">
       <h1>Sleep Tracker</h1>
-      <input type="time" id="sleepStart" />
-      <input type="time" id="sleepEnd" />
+      <input type="date" id="sleepDate" />
+      <input type="time" id="sleepTime" />
+      <input type="number" id="sleepHours" placeholder="Hours Slept" min="0" step="0.1" />
       <button onclick="logSleep()">Log Sleep</button>
-      <ul id="sleepLogList"></ul>
+      <ul id="sleepList"></ul>
     </div>
   </div>
 
   <script>
-    const taskInput = document.getElementById("taskInput");
-    const dateKey = new Date().toISOString().split("T")[0];
-    document.getElementById("currentDate").textContent = "📅 " + new Date().toLocaleDateString();
+    const taskList = document.getElementById("taskList");
+    const logList = document.getElementById("logList");
+    const socialList = document.getElementById("socialList");
+    const hairList = document.getElementById("hairList");
+    const sleepList = document.getElementById("sleepList");
 
-    async function getStoredTasks() {
-      const snapshot = await db.ref("tasks").get();
-      return snapshot.exists() ? snapshot.val() : {};
+    const dateEl = document.getElementById("currentDate");
+    const today = new Date();
+    dateEl.textContent = "📅 " + today.toLocaleDateString(undefined, { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+
+    function switchTab(id) {
+      document.querySelectorAll('.todo-container').forEach(div => div.classList.add('hidden'));
+      document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
+      document.getElementById(id).classList.remove('hidden');
+      document.querySelector(`.tab[onclick="switchTab('${id}')"]`).classList.add("active");
     }
 
-    function storeTasks(tasks) {
-      db.ref("tasks").set(tasks);
+    function updateClock() {
+      document.getElementById("liveClock").textContent = new Date().toLocaleTimeString();
     }
+    setInterval(updateClock, 1000);
+    updateClock();
 
-    async function addTask(text = "", done = false, date = dateKey) {
-      const tasks = await getStoredTasks();
-      tasks[date] = tasks[date] || [];
+    // TO-DO
+    function addTask(text = "", completed = false) {
+      const taskInput = document.getElementById("taskInput");
       const taskText = text || taskInput.value.trim();
       if (!taskText) return;
-      tasks[date].push({ text: taskText, done });
-      storeTasks(tasks);
-      taskInput.value = "";
-      renderTasks(tasks);
-    }
-
-    async function toggleDone(date, index) {
-      const tasks = await getStoredTasks();
-      tasks[date][index].done = !tasks[date][index].done;
-      storeTasks(tasks);
-      renderTasks(tasks);
-    }
-
-    async function deleteTask(date, index) {
-      const tasks = await getStoredTasks();
-      tasks[date].splice(index, 1);
-      storeTasks(tasks);
-      renderTasks(tasks);
-    }
-
-    function renderTasks(tasksData = null) {
-      const container = document.getElementById("dailyTaskSections");
-      container.innerHTML = "";
-      const tasks = tasksData || {};
-      Object.keys(tasks).sort((a,b) => b.localeCompare(a)).forEach(date => {
-        const details = document.createElement("details");
-        if (date === dateKey) details.setAttribute("open", true);
-        const summary = document.createElement("summary");
-        summary.textContent = `Tasks for ${new Date(date).toLocaleDateString()}`;
-        const ul = document.createElement("ul");
-        tasks[date].forEach((task, i) => {
-          const li = document.createElement("li");
-          if (task.done) li.classList.add("completed");
-          const group = document.createElement("div");
-          group.className = "task-group";
-          const checkbox = document.createElement("input");
-          checkbox.type = "checkbox";
-          checkbox.checked = task.done;
-          checkbox.onchange = () => toggleDone(date, i);
-          const span = document.createElement("span");
-          span.className = "task-text";
-          span.textContent = task.text;
-          const del = document.createElement("button");
-          del.textContent = "🗑️";
-          del.className = "remove-btn";
-          del.onclick = () => deleteTask(date, i);
-          group.appendChild(checkbox);
-          group.appendChild(span);
-          li.appendChild(group);
-          li.appendChild(del);
-          ul.appendChild(li);
-        });
-        details.appendChild(summary);
-        details.appendChild(ul);
-        container.appendChild(details);
-      });
-    }
-
-    function switchTab(tabName) {
-      document.querySelectorAll(".tab").forEach(tab => {
-        tab.classList.toggle("active", tab.dataset.tab === tabName);
-      });
-      const sections = ["todo", "timelog", "social", "hair", "sleep"];
-      sections.forEach(id => {
-        document.getElementById(id).classList.toggle("hidden", id !== tabName);
-      });
-    }
-
-    function addTimeLog() {
-      const start = document.getElementById("timeStart").value;
-      const end = document.getElementById("timeEnd").value;
-      const desc = document.getElementById("activityDesc").value;
-      if (!start || !end || !desc) return;
 
       const li = document.createElement("li");
-      li.textContent = `${start} - ${end}: ${desc}`;
-      document.getElementById("timeLogList").appendChild(li);
+      if (completed) li.classList.add("completed");
 
-      document.getElementById("timeStart").value = "";
-      document.getElementById("timeEnd").value = "";
-      document.getElementById("activityDesc").value = "";
+      const taskGroup = document.createElement("div");
+      taskGroup.className = "task-group";
+
+      const checkbox = document.createElement("input");
+      checkbox.type = "checkbox";
+      checkbox.checked = completed;
+
+      const span = document.createElement("span");
+      span.className = "task-text";
+      span.textContent = taskText;
+
+      checkbox.onchange = () => {
+        li.classList.toggle("completed");
+      };
+
+      const deleteBtn = document.createElement("button");
+      deleteBtn.textContent = "🗑️";
+      deleteBtn.className = "remove-btn";
+      deleteBtn.onclick = () => li.remove();
+
+      taskGroup.appendChild(checkbox);
+      taskGroup.appendChild(span);
+      li.appendChild(taskGroup);
+      li.appendChild(deleteBtn);
+
+      taskList.appendChild(li);
+      if (!text) taskInput.value = "";
     }
 
-    function addSocialLog() {
-      const app = document.getElementById("socialActivity").value.trim();
-      if (!app) return;
+    // TIME LOG
+    let currentClockIn = null;
+
+    function clockIn() {
+      const activity = document.getElementById("activityName").value.trim();
+      if (!activity) return alert("Please enter an activity.");
+      currentClockIn = { activity, start: new Date().toLocaleTimeString() };
+      document.getElementById("clockInBtn").disabled = true;
+      document.getElementById("clockOutBtn").disabled = false;
+      document.getElementById("activityName").disabled = true;
+    }
+
+    function clockOut() {
+      if (!currentClockIn) return;
+      currentClockIn.end = new Date().toLocaleTimeString();
       const li = document.createElement("li");
-      li.textContent = `${new Date().toLocaleTimeString()}: ${app}`;
-      document.getElementById("socialList").appendChild(li);
-      document.getElementById("socialActivity").value = "";
+      li.className = "log-row";
+
+      const logText = document.createElement("span");
+      logText.textContent = `📝 ${currentClockIn.activity} — ${currentClockIn.start} to ${currentClockIn.end}`;
+
+      const deleteBtn = document.createElement("button");
+      deleteBtn.textContent = "🗑️";
+      deleteBtn.className = "remove-btn";
+      deleteBtn.onclick = () => li.remove();
+
+      li.appendChild(logText);
+      li.appendChild(deleteBtn);
+      logList.appendChild(li);
+
+      document.getElementById("activityName").value = "";
+      document.getElementById("activityName").disabled = false;
+      document.getElementById("clockInBtn").disabled = false;
+      document.getElementById("clockOutBtn").disabled = true;
+      currentClockIn = null;
     }
 
-    function logHairTouch() {
+    // SOCIAL MEDIA
+    function logSocial(platform) {
+      const reason = document.getElementById("socialReason").value.trim();
       const li = document.createElement("li");
-      li.textContent = `Touched at ${new Date().toLocaleTimeString()}`;
-      document.getElementById("hairLogList").appendChild(li);
+      const now = new Date().toLocaleTimeString();
+      li.textContent = `${platform} ➜ ${now} (${reason || "⚠️ No reason"}) ➜ 1 penalty point`;
+      const del = document.createElement("button");
+      del.textContent = "🗑️";
+      del.className = "remove-btn";
+      del.onclick = () => li.remove();
+      li.appendChild(del);
+      socialList.appendChild(li);
+      document.getElementById("socialReason").value = "";
     }
 
+    // HAIR TRACKER
+    function logHair() {
+      const li = document.createElement("li");
+      li.textContent = `😬 Hair played — ${new Date().toLocaleTimeString()}`;
+      const del = document.createElement("button");
+      del.textContent = "🗑️";
+      del.className = "remove-btn";
+      del.onclick = () => li.remove();
+      li.appendChild(del);
+      hairList.appendChild(li);
+    }
+
+    // SLEEP TRACKER
     function logSleep() {
-      const start = document.getElementById("sleepStart").value;
-      const end = document.getElementById("sleepEnd").value;
-      if (!start || !end) return;
+      const date = document.getElementById("sleepDate").value;
+      const time = document.getElementById("sleepTime").value;
+      const hours = document.getElementById("sleepHours").value;
+      if (!date || !time || !hours) return alert("Please fill all fields.");
       const li = document.createElement("li");
-      li.textContent = `Slept from ${start} to ${end}`;
-      document.getElementById("sleepLogList").appendChild(li);
-      document.getElementById("sleepStart").value = "";
-      document.getElementById("sleepEnd").value = "";
+      li.textContent = `🛌 ${date} — Slept at ${time}, ${hours}h`;
+      const del = document.createElement("button");
+      del.textContent = "🗑️";
+      del.className = "remove-btn";
+      del.onclick = () => li.remove();
+      li.appendChild(del);
+      sleepList.appendChild(li);
     }
-
-    window.onload = async () => {
-      const tasks = await getStoredTasks();
-      renderTasks(tasks);
-      document.querySelectorAll(".tab").forEach(tab => {
-        tab.addEventListener("click", () => {
-          switchTab(tab.dataset.tab);
-        });
-      });
-    };
   </script>
 </body>
 </html>
