--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
     }
     .content {
       padding: 30px;
-      max-width: 700px;
+      max-width: 800px;
       margin: auto;
     }
-    h1 { text-align: center; }
+    h1 {
+      text-align: center;
+    }
     #currentDate {
       text-align: center;
       font-weight: bold;
@@ -42,12 +44,14 @@
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    input, select, button {
-      width: 100%;
+    input, button {
       padding: 10px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
+      margin: 5px 0;
       border-radius: 5px;
+    }
+    input {
+      border: 1px solid #ccc;
+      width: 100%;
     }
     button {
       background: #007bff;
@@ -55,41 +59,48 @@
       border: none;
       cursor: pointer;
     }
-    ul { list-style-type: none; padding-left: 0; }
+    ul {
+      list-style-type: none;
+      padding-left: 0;
+    }
     li {
       background: #eee;
+      margin: 5px 0;
       padding: 10px;
-      margin-bottom: 8px;
       border-radius: 5px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-    .completed .task-text {
-      text-decoration: line-through;
-      color: gray;
-    }
-    .task-group {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      flex-grow: 1;
-    }
     .remove-btn {
       background: red;
       color: white;
+      border: none;
       padding: 5px 10px;
       border-radius: 4px;
+      cursor: pointer;
     }
-    input[type="checkbox"] {
-      transform: scale(1.2);
+    .hidden {
+      display: none;
     }
-    .hidden { display: none; }
-    .log-row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 10px;
+    .accordion {
+      background-color: #f1f1f1;
+      cursor: pointer;
+      padding: 10px;
+      width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
+      font-weight: bold;
+      border-radius: 5px;
+      margin-top: 10px;
+    }
+    .panel {
+      padding: 0 15px;
+      display: none;
+      overflow: hidden;
+      background-color: white;
+      border-radius: 5px;
     }
   </style>
 </head>
@@ -103,101 +114,165 @@
   </div>
   <div class="content">
     <div id="currentDate"></div>
+
     <div id="todo" class="todo-container">
-      <h1>Meri's To-Do's</h1>
-      <select id="todoDate"></select>
-      <input type="text" id="taskInput" placeholder="Write your task..." />
+      <h1>To-Do List</h1>
+      <input type="text" id="taskInput" placeholder="Add task...">
       <button onclick="addTask()">Add</button>
-      <ul id="taskList"></ul>
+      <div id="todoAccordion"></div>
     </div>
-    <!-- Additional trackers follow similar structure -->
+
+    <div id="timelog" class="todo-container hidden">
+      <h1>Clock-In / Clock-Out</h1>
+      <input type="text" id="activityInput" placeholder="What are you working on?">
+      <button onclick="clockIn()">🟢 Clock In</button>
+      <button onclick="clockOut()">🔴 Clock Out</button>
+      <div id="timelogAccordion"></div>
+    </div>
+
+    <div id="social" class="todo-container hidden">
+      <h1>Social Media Tracker</h1>
+      <input type="text" id="socialReason" placeholder="Why are you opening it?">
+      <button onclick="logSocial('TikTok')">TikTok</button>
+      <button onclick="logSocial('Instagram')">Instagram</button>
+      <button onclick="logSocial('YouTube')">YouTube</button>
+      <div id="socialAccordion"></div>
+    </div>
+
+    <div id="hair" class="todo-container hidden">
+      <h1>Hair Playing Tracker</h1>
+      <button onclick="logHair()">😬 I played with my hair</button>
+      <div id="hairAccordion"></div>
+    </div>
+
+    <div id="sleep" class="todo-container hidden">
+      <h1>Sleep Tracker</h1>
+      <input type="date" id="sleepDate" />
+      <input type="time" id="sleepTime" placeholder="Sleep Time" />
+      <input type="number" id="sleepHours" placeholder="Hours Slept" min="0" step="0.1" />
+      <button onclick="logSleep()">Log Sleep</button>
+      <div id="sleepAccordion"></div>
+    </div>
   </div>
+
   <script>
-    const dateEl = document.getElementById("currentDate");
-    const todayStr = new Date().toISOString().split("T")[0];
-    dateEl.textContent = "📅 " + new Date().toDateString();
-
-    const taskList = document.getElementById("taskList");
-    const todoDate = document.getElementById("todoDate");
-    let todoData = JSON.parse(localStorage.getItem("meri_todos")) || {};
-
-    function populateDates(select) {
-      select.innerHTML = "";
-      const dates = Object.keys(todoData).sort((a,b)=>new Date(b)-new Date(a));
-      if (!dates.includes(todayStr)) dates.unshift(todayStr);
-      dates.forEach(date => {
-        const option = document.createElement("option");
-        option.value = date;
-        option.textContent = date;
-        select.appendChild(option);
-      });
-    }
+    const getToday = () => new Date().toISOString().split("T")[0];
+    document.getElementById("currentDate").textContent = `📅 ${new Date().toLocaleDateString()}`;
 
     function switchTab(id) {
-      document.querySelectorAll('.todo-container').forEach(div => div.classList.add('hidden'));
-      document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
+      document.querySelectorAll('.todo-container').forEach(d => d.classList.add('hidden'));
+      document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
       document.getElementById(id).classList.remove('hidden');
-      document.querySelector(`.tab[onclick="switchTab('${id}')"]`).classList.add("active");
+      document.querySelector(`.tab[onclick="switchTab('${id}')"]`).classList.add('active');
     }
 
-    function renderTasks(date) {
-      taskList.innerHTML = "";
-      const tasks = todoData[date] || [];
-      tasks.forEach(({text, completed}) => addTask(text, completed, false));
+    function addToAccordion(containerId, date, text, isCheckbox = false) {
+      const container = document.getElementById(containerId);
+      let section = document.getElementById(`${containerId}-${date}`);
+      if (!section) {
+        const btn = document.createElement("button");
+        btn.className = "accordion";
+        btn.textContent = date;
+        const panel = document.createElement("div");
+        panel.className = "panel";
+        panel.id = `${containerId}-${date}`;
+        btn.onclick = () => {
+          panel.style.display = panel.style.display === "block" ? "none" : "block";
+        };
+        container.appendChild(btn);
+        container.appendChild(panel);
+        section = panel;
+      }
+      const entry = document.createElement("li");
+      if (isCheckbox) {
+        const checkbox = document.createElement("input");
+        checkbox.type = "checkbox";
+        const label = document.createElement("span");
+        label.textContent = text;
+        checkbox.onchange = () => {
+          label.style.textDecoration = checkbox.checked ? "line-through" : "none";
+        };
+        entry.appendChild(checkbox);
+        entry.appendChild(label);
+      } else {
+        entry.textContent = text;
+      }
+      const del = document.createElement("button");
+      del.textContent = "🗑️";
+      del.className = "remove-btn";
+      del.onclick = () => entry.remove();
+      entry.appendChild(del);
+      section.appendChild(entry);
     }
 
-    function addTask(text = "", completed = false, save = true) {
-      const input = document.getElementById("taskInput");
-      const taskText = text || input.value.trim();
-      if (!taskText) return;
-
-      const li = document.createElement("li");
-      if (completed) li.classList.add("completed");
-      const taskGroup = document.createElement("div");
-      taskGroup.className = "task-group";
-      const checkbox = document.createElement("input");
-      checkbox.type = "checkbox";
-      checkbox.checked = completed;
-      const span = document.createElement("span");
-      span.className = "task-text";
-      span.textContent = taskText;
-
-      checkbox.onchange = () => {
-        li.classList.toggle("completed");
-        saveTasks();
-      };
-
-      const deleteBtn = document.createElement("button");
-      deleteBtn.textContent = "🗑️";
-      deleteBtn.className = "remove-btn";
-      deleteBtn.onclick = () => {
-        li.remove();
-        saveTasks();
-      };
-
-      taskGroup.appendChild(checkbox);
-      taskGroup.appendChild(span);
-      li.appendChild(taskGroup);
-      li.appendChild(deleteBtn);
-      taskList.appendChild(li);
-      if (!text) input.value = "";
-      if (save) saveTasks();
+    function addTask() {
+      const task = document.getElementById("taskInput").value.trim();
+      if (!task) return;
+      addToAccordion("todoAccordion", getToday(), task, true);
+      saveLogEntry("todo", getToday(), task);
+      document.getElementById("taskInput").value = "";
     }
 
-    function saveTasks() {
-      const date = todoDate.value;
-      todoData[date] = [...taskList.children].map(li => {
-        const text = li.querySelector(".task-text").textContent;
-        const completed = li.querySelector("input").checked;
-        return {text, completed};
-      });
-      localStorage.setItem("meri_todos", JSON.stringify(todoData));
+    function clockIn() {
+      const activity = document.getElementById("activityInput").value.trim();
+      if (!activity) return alert("Enter activity");
+      localStorage.setItem("clockIn", JSON.stringify({ activity, time: new Date().toLocaleTimeString() }));
     }
 
-    todoDate.onchange = () => renderTasks(todoDate.value);
-    populateDates(todoDate);
-    todoDate.value = todayStr;
-    renderTasks(todayStr);
+    function clockOut() {
+      const clockInData = JSON.parse(localStorage.getItem("clockIn"));
+      if (!clockInData) return alert("You haven’t clocked in yet");
+      const endTime = new Date().toLocaleTimeString();
+      const log = `${clockInData.activity} — ${clockInData.time} to ${endTime}`;
+      addToAccordion("timelogAccordion", getToday(), log);
+      localStorage.removeItem("clockIn");
+      saveLogEntry("timelog", getToday(), log);
+    }
+
+    function logSocial(platform) {
+      const reason = document.getElementById("socialReason").value.trim() || "No reason";
+      const time = new Date().toLocaleTimeString();
+      const log = `${platform} ➜ ${time} (${reason})`;
+      addToAccordion("socialAccordion", getToday(), log);
+      saveLogEntry("social", getToday(), log);
+      document.getElementById("socialReason").value = "";
+    }
+
+    function logHair() {
+      const log = `😬 Hair played — ${new Date().toLocaleTimeString()}`;
+      addToAccordion("hairAccordion", getToday(), log);
+      saveLogEntry("hair", getToday(), log);
+    }
+
+    function logSleep() {
+      const date = document.getElementById("sleepDate").value;
+      const time = document.getElementById("sleepTime").value;
+      const hours = document.getElementById("sleepHours").value;
+      if (!date || !time || !hours) return alert("Fill all fields");
+      const log = `🛌 Slept at ${time}, ${hours}h`;
+      addToAccordion("sleepAccordion", date, log);
+      saveLogEntry("sleep", date, log);
+    }
+
+    function saveLogEntry(type, date, entry) {
+      const logs = JSON.parse(localStorage.getItem(type)) || {};
+      if (!logs[date]) logs[date] = [];
+      logs[date].push(entry);
+      localStorage.setItem(type, JSON.stringify(logs));
+    }
+
+    function loadLogEntries(type, containerId, isCheckbox = false) {
+      const logs = JSON.parse(localStorage.getItem(type)) || {};
+      for (const date in logs) {
+        logs[date].forEach(entry => addToAccordion(containerId, date, entry, isCheckbox));
+      }
+    }
+
+    loadLogEntries("todo", "todoAccordion", true);
+    loadLogEntries("timelog", "timelogAccordion");
+    loadLogEntries("social", "socialAccordion");
+    loadLogEntries("hair", "hairAccordion");
+    loadLogEntries("sleep", "sleepAccordion");
   </script>
 </body>
 </html>
